assets/static/css/main.css
/*--------------------------------------------------------------------
*
* LEVELDB.org
* v.1.0.1
*
* Designed and coded by @fox
* Maintained by github.com/orgs/level/members
* ❤︎ 
*
--------------------------------------------------------------------*/
*,
*:after,
*:before {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
html {
  font-size: 100%;
}
body {
  font: 400 1rem/1.5 "ff-more-web-pro", Georgia, Times, serif;
  color: #333;
  -webkit-font-smoothing: antialiased;
}
::-moz-selection {
  background-color: #34954c;
  color: #fff;
}
::selection {
  background-color: #34954c;
  color: #fff;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 30px 0;
  color: #000;
  font-family: "franklin-gothic-urw", Helvetica, Arial, sans-serif;
  font-weight: 900;
}
h1,
h2,
h3 {
  line-height: 1.2;
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2.4rem;
}
h3 {
  margin-top: 0;
  font-size: 1.8rem;
}
h4 {
  font-size: 1.2rem;
  color: #707070;
}
h5 {
  font-size: 1rem;
}
small {
  font-size: 0.75rem;
}
a {
  cursor: pointer;
  color: #34954c;
  text-decoration: none;
}
a:hover:not(.button) {
  color: #1a4b26;
}
a:hover {
  transition: all 0.5s ease-in;
  -webkit-transition: all 0.5s ease-in;
}
a:focus {
  outline: none;
}
.cf:before,
.cf:after {
  content: " ";
  display: table;
}
.cf:after {
  clear: both;
}
.pull-left {
  float: left;
}
.pull-right {
  float: right;
}
img,
video,
iframe {
  max-width: 100%;
}
iframe {
  min-height: 550px;
}
.content {
  margin: 0 auto;
}
section {
  position: relative;
  padding-bottom: 50px;
  margin-bottom: 50px;
}
section:after {
  content: '';
  position: absolute;
  left: 50%;
  top: 100%;
  height: 1px;
  width: 20%;
  margin-left: -10%;
  background-color: #e0e0e0;
}
section.centered {
  text-align: center;
}
@media (max-width: 480px) {
  .intro h1 {
    font-size: 1.8rem;
    line-height: 1;
  }
  .intro h3 {
    font-size: 1.2rem;
  }
}
@media (min-width: 481px) and (max-width: 1023px) {
  .content {
    width: 80%;
  }
}
@media (min-width: 1023px) {
  .content {
    width: 60%;
  }
  .column {
    float: left;
    width: 50%;
  }
  .column:first-of-type {
    padding-right: 30px;
  }
  .column:last-of-type {
    padding-left: 30px;
  }
  .column.column-small {
    width: calc(100% / 3);
    padding: 0;
  }
}
@media (max-width: 768px) {
  .content {
    width: 90%;
  }
}
ul,
ol {
  margin: 20px 0 20px 30px;
  padding: 0;
}
ul li ul li,
ol li ul li {
  list-style-type: circle;
}
ul li li ul li,
ol li li ul li {
  list-style-type: square;
}
ul li {
  list-style-type: disc;
}
ul.unstyled {
  margin: 0;
}
ul.unstyled li {
  display: inline-block;
  list-style-type: none;
  padding: 0 20px;
}
ul.unstyled li:last-of-type {
  padding-right: 0;
}
ol li {
  list-style-type: decimal;
}
dl dt {
  font-weight: bold;
}
dl dd {
  margin: 0;
}
button {
  border: none;
}
button,
.button {
  display: inline-block;
  border-radius: 3px;
  font-size: 1rem;
  font-family: "franklin-gothic-urw", Helvetica, Arial, sans-serif;
  text-align: center;
  cursor: pointer;
  -webkit-appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
}
button:disabled,
.button:disabled {
  cursor: not-allowed;
}
button:focus,
.button:focus {
  outline: none;
}
button.button-primary,
.button.button-primary {
  background-color: #34954c;
}
button.button-primary:hover,
.button.button-primary:hover {
  background-color: #246835;
}
button.button-secondary,
.button.button-secondary {
  background-color: #8cd79f;
}
button.button-secondary:hover,
.button.button-secondary:hover {
  background-color: #34954c;
}
button.button-large,
.button.button-large {
  height: 50px;
  line-height: 50px;
  padding: 0 20px;
}
@media (max-width: 480px) {
  .button {
    width: 100%;
  }
}
.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
@-webkit-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}
.fadeInDown {
  -webkit-animation-name: fadeInDown;
  animation-name: fadeInDown;
}
@-moz-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}
@-webkit-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}
@-o-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}
@keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}
header {
  border-bottom: 1px solid #e0e0e0;
}
header h3 {
  margin: 10px 0;
  padding-left: 80px;
  background: url("/img/logo.svg") 0 0 no-repeat;
  background-size: contain;
  text-transform: uppercase;
}
header nav input[type=checkbox] {
  position: absolute;
  top: -9999px;
  left: -9999px;
}
header nav h3 {
  line-height: 80px;
}
header nav a,
header nav label {
  line-height: 100px;
}
header nav label {
  cursor: pointer;
  color: #34954c;
  font-family: "franklin-gothic-urw", Helvetica, Arial, sans-serif;
  font-weight: 800;
}
header nav .label {
  display: inline-block;
  padding: 3px 5px;
  margin-left: 5px;
  border-radius: 3px;
  background-color: #8cd79f;
  color: #fff;
  font: 400 0.75rem/1.25 "franklin-gothic-urw", Helvetica, Arial, sans-serif;
}
@media (min-width: 769px) {
  nav label {
    display: none;
  }
}
@media (max-width: 768px) {
  nav .pull-right {
    float: none;
    text-align: right;
  }
  nav .unstyled {
    display: none;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled {
    display: block;
    width: 100%;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled li {
    padding: 0;
    position: relative;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled li:not(:last-of-type) {
    border-bottom: 1px solid #e0e0e0;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled li,
  nav input[type=checkbox]:checked ~ ul.unstyled a {
    display: inline-block;
    width: 100%;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled a {
    padding: 0 10px;
    text-align: left;
    line-height: 60px;
  }
  nav input[type=checkbox]:checked ~ ul.unstyled .label {
    position: absolute;
    top: 20px;
    right: 10px;
  }
}
footer {
  padding-bottom: 40px;
  color: #999;
  text-align: center;
}
footer p:not(:last-child) {
  margin: 0;
}
.intro {
  text-align: center;
}
.intro h1 {
  margin: 60px 0 0 0;
}
.intro h3 {
  margin-top: 0;
  font-weight: 400;
  line-height: 1.2;
}
@media (min-width: 1023px) {
  .intro h4 {
    margin: 0 auto 30px;
    max-width: 80%;
  }
}
.conferences dl {
  margin: 0;
  padding: 25px 0;
}
.conferences dl:first-of-type {
  padding-top: 0;
}
.conferences dl:not(:last-of-type) {
  border-bottom: 1px solid #e0e0e0;
}
.conferences dl dt {
  margin: 0;
}
.conferences dl dd {
  color: #707070;
}
.conferences dl dd a,
.conferences dl dd a:hover {
  color: inherit;
}
.conferences dl dd a {
  text-decoration: underline;
}
.conferences dl dd a:hover {
  text-decoration: none;
}
.platforms ul {
  padding-top: 20px;
}
.platforms img {
  display: block;
  margin-bottom: 20px;
  opacity: 0.5;
}
@media (max-width: 480px) {
  .platforms ul.unstyled li {
    float: left;
    width: 50%;
    padding: 0;
    margin-bottom: 30px;
  }
  .platforms ul.unstyled li img {
    margin: 0 auto 10px;
  }
}
.community p {
  margin: 0;
}
.community p:last-of-type {
  margin-bottom: 40px;
}
.community .button-google,
.community .button-twitter {
  position: relative;
  padding-left: 50px;
}
.community .button-google:before,
.community .button-twitter:before {
  content: '';
  position: absolute;
  top: 0;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: contain;
  opacity: 0.5;
}
.community .button-google:before {
  left: 10px;
  height: 120px;
  width: 40px;
  background-image: url("/img/icon-google.svg");
}
.community .button-twitter:before {
  left: 10px;
  height: 60px;
  width: 60px;
  background-image: url("/img/icon-twitter.svg");
}
@media (min-width: 1023px) {
  .community .button:not(:last-of-type) {
    margin-right: 20px;
  }
}
@media (max-width: 768px) {
  .community .button:not(:last-of-type) {
    margin-bottom: 20px;
  }
}
@media (min-width: 481px) and (max-width: 1023px) {
  .community .button {
    display: block;
    width: 50%;
    margin: 0 auto 20px;
  }
  .community .button:last-child {
    margin-bottom: 0;
  }
}
@media (min-width: 1023px) {
  .features .column {
    text-align: left;
  }
}
@media (min-width: 1023px) {
  .papers p {
    margin: 0;
  }
}
@media (max-width: 768px) {
  .papers p {
    margin-top: 0;
  }
}

